--- a/index.html
+++ b/index.html
@@ -6,17 +6,39 @@
         <meta name="マインスイーパ" content="フィールドに隠された地雷を避けながら、地雷以外のマスを全て開けていくゲーム">
 
         <link rel="stylesheet" href="ms.css">
-        <link rel="shortcut icon" href="favicon.ico">
-       
+        <link rel="shortcut icon" href="mine.ico">
+        <link rel="apple-touch-icon" href="mine.ico">
     </head>
     <body>
         <h1>マインスイーパ</h1>
 
+<p>フィールドに隠された地雷を避けながら、地雷以外のマスを全て開けていくゲーム</p>
+
         <div id="field">
-        </div>
 
-        <p>よくあるマインスイーパです。</p>
+            <form name="f">
+             field:
+             <select name="i_f_n" size=3>
+              <option value="5">5*5</option>
+              <option value="7">7*7</option>
+              <option value="9" selected>9*9</option>
+              <option value="11">11*11</option>
+              <option value="13">13*13</option>
+             </select>
 
-        <script type="text/javascript" src="ms.js"></script>
-    </body>
-    </html>
+        mine:
+        <select name="i_m_n" size=3>
+          <option value="1">easy</option>
+          <option value="2" selected>normal</option>
+          <option value="3">hard</option>
+        </select>
+      <input type="button" value="Start!" onclick="init(document.f.i_f_n.value,document.f.i_m_n.value);">
+      </form>
+
+</div>
+
+
+
+<script type="text/javascript" src="ms.js"></script>
+</body>
+</html>
